Unnecessary and incorrect "Code Cache Roots" G1 log entry

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 8u60, 9
    • Component/s: hotspot
    • gc
    • b64

        When the changes to enable per phase timing measurements for root scanning was introduced in JDK-8027962 a phase named "Code Cache Roots" was mistakenly added and measured around the call to oops_into_collection_set_do in G1RootProcessor. There are already sub-phases to measure that phase: UpdateRS, ScanRS and CodeRoots. Also, none of them are included in the Ext Root Scanning times.

        Suggested fix is to simply remove the incorrect log entry, the information already exists in the gc log.

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Mikael Gerdin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: