8077400: Unnecessary and incorrect "Code Cache Roots" G1 log entry

Reviewed-by: tschatzl, brutisso, sangheki